<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="expand_all">"Expand All"</string>
  <string name="view_multi_template">"View Multi Template"</string>
  <string name="_test_escaped_percent_followed_by_placeholder_Z1B9wgT">"%%%1$s"</string>
  <string name="_test_escaped_percent_followed_by_s_Z14aERG">"%%s"</string>
  <string name="_test_escaped_percent_2w8byv">"%%"</string>
  <string name="_test_percent_Z1IKlxu">"%%"</string>
  <string name="tab">"Tab \t is working"</string>
  <string name="_sprintf_numbered_placeholders_IRoX8">"format $2: %2$s, $1: %1$s"</string>
  <string name="sprintf">"format me %1$s : %2$s"</string>
  <string name="_special_keys___ZER4vH">"\""</string>
  <string name="_special_keys___ZER4vC">"\'"</string>
  <string name="_special_keys___ZER4uK">"\\"</string>
  <string name="_special_keys___ZER4w7">"t"</string>
  <string name="_special_keys___ZER4w3">"r"</string>
  <string name="_special_keys___ZER4w6">"n"</string>
  <string name="_special_characters_double_quote_2kCqME">"char \": \" END"</string>
  <string name="_special_characters_single_quote_Z1PzEr5">"char \': \' END"</string>
  <string name="_special_characters_backslash_1zL9ty">"char \\: \\ END"</string>
  <string name="_special_characters_t_LTTqi">"char \\t: \t END"</string>
  <string name="_special_characters_r_LTTqg">"char \\r: \r END"</string>
  <string name="_special_characters_n_LTTqc">"char \\n: \n END"</string>
  <string name="_new_line_1zbCfy">"Let\'s try with a new \n line"</string>
  <string name="html">"Text with &lt;b>HTML&lt;/b> &lt;wrong &amp; Hi"</string>
  <string name="_hello_world_Z2tF6Gu">"Hello World !"</string>
  <string name="array">"split the translation into multiples lines"</string>
  <string name="accordion">"Accordion"</string>
  <string name="i18n">"Globalization"</string>
  <string name="Looking_forward_to_your_joining">"Looking Forward To Your Participation"</string>
  <string name="project">"Project"</string>
  <string name="example">"Example"</string>
  <string name="_app_name_1k3Sbz">"NSVue Examples"</string>
  <string name="app_name">"NSVue Examples"</string>
  <string name="title_activity_kimera">"NSVue Examples"</string>
  <string name="fb_login_protocol_scheme">"fb{{ YOUR_FACEBOOK_APP_ID }}"</string>
  <string name="facebook_app_id">"{{ YOUR_FACEBOOK_APP_ID }}"</string>
  <string name="shortcut_short_label3">"function3-short"</string>
  <string name="shortcut_long_label3">"function3-long"</string>
  <string name="shortcut_disabled_message3">"function3-disabled"</string>
  <string name="shortcut_short_label2">"function2-short"</string>
  <string name="shortcut_long_label2">"function2-long"</string>
  <string name="shortcut_disabled_message2">"function2-disabled"</string>
  <string name="shortcut_short_label1">"function1-short"</string>
  <string name="shortcut_long_label1">"function1-long"</string>
  <string name="shortcut_disabled_message1">"function1-disabled"</string>
  <string name="collapse_all">"collapse_all"</string>
</resources>
